AGGIORNAMENTI: -Reworkate completamente tutte le view, aggiungendo un layout più elegante -Aggiunti svariati controlli -Fixati alcuni bug -Adesso l'area personale di ogni giudice ha un pulsante per tornare alla home
PROBLEMI CONOSCIUTI:
-Alcuni messaggi della gui non appaiono correttamente, tuttavia il codice comunque è funzionante e non causa problemi (Problema di portata minore, verrà preso in considerazione più avanti)

FUTURI AGGIORNAMENTI:
-Rimozione dalla lista di selezione membri di un team i Giudici, in quanto non devono poter far parte di un team

--- a/src/main/java/View/OrganizzatoreView.form
+++ b/src/main/java/View/OrganizzatoreView.form
@@ -15,7 +15,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="&quot;Inserisci Titolo Hackhathon&quot;"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="8d2be" class="javax.swing.JTextField" binding="txtDimMaxTeam">
@@ -25,7 +25,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="&quot;Inserisci dimensione massima team&quot;"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="cb8ce" class="javax.swing.JTextField" binding="txtNomeOrganizzatore">
@@ -35,7 +35,7 @@
           </grid>
         </constraints>
         <properties>
-          <text value="&quot;Inserisci il Nome dell'organizzatore&quot;"/>
+          <text value=""/>
         </properties>
       </component>
       <component id="4b38b" class="javax.swing.JButton" binding="btnCreaHackathon">
